--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     host:
         - python {{ python }}
         - setuptools
+        - scipy>=1.5
         - cython>=0.29
         - pip
         - llvm-openmp  # [osx]
@@ -29,7 +30,6 @@ requirements:
         - python {{ python }}
         - numpy>1.11
         - scipy>=1.5
-        - suitesparse
         - matplotlib
         - pooch
         - llvm-openmp  # [osx]
