--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -48,13 +48,13 @@ jobs:
               if: matrix.os != 'windows-latest'
               run: rm -rf /opt/hostedtoolcache 
 
-            # Build wheel for windows X86_64 and ARM64
-            - name: Build wheels in windows (X86_64, ARM64) Python ${{ matrix.python-version }}
+            # Build wheel for windows X86_64
+            - name: Build wheels in windows (X86_64) Python ${{ matrix.python-version }}
               if: matrix.os == 'windows-latest'
               uses: pypa/cibuildwheel@v2.16.5
               env:
-                  CIBW_ARCHS_WINDOWS: "AMD64 x86 ARM64"
-                  CIBW_BUILD: "${{ matrix.python-version }}-win_amd64 ${{ matrix.python-version }}-win_arm64"
+                  CIBW_ARCHS_WINDOWS: "AMD64 x86"
+                  CIBW_BUILD: "${{ matrix.python-version }}-win_amd64"
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0"
@@ -80,7 +80,7 @@ jobs:
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_BEFORE_BUILD: brew reinstall gcc
-                  CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0"
+                  CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 PKG_CONFIG_PATH='/usr/local/opt/openblas/lib/pkgconfig'"
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
                   USE_OPENMP: 0
@@ -94,7 +94,7 @@ jobs:
             # Note that wheels for linux AARCH64 will be built on cirrus ci (see /tools/ci)
             - name: Build wheels in linux (X86_64) Python ${{ matrix.python-version }}
               if: matrix.os == 'ubuntu-latest'
-              uses: pypa/cibuildwheel@v2.16.2
+              uses: pypa/cibuildwheel@v2.16.5
               env:
                   CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
                   CIBW_ARCHS_LINUX: "x86_64"
