--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -49,13 +49,13 @@ jobs:
               if: matrix.os != 'windows-latest'
               run: rm -rf /opt/hostedtoolcache 
 
-            # Build wheel for windows X86_64 and ARM64
-            - name: Build wheels in windows (X86_64, ARM64) Python ${{ matrix.python-version }}
+            # Build wheel for windows X86_64
+            - name: Build wheels in windows (X86_64) Python ${{ matrix.python-version }}
               if: matrix.os == 'windows-latest'
               uses: pypa/cibuildwheel@v2.16.5
               env:
-                  CIBW_ARCHS_WINDOWS: "AMD64 x86 ARM64"
-                  CIBW_BUILD: "${{ matrix.python-version }}-win_amd64 ${{ matrix.python-version }}-win_arm64"
+                  CIBW_ARCHS_WINDOWS: "AMD64 x86"
+                  CIBW_BUILD: "${{ matrix.python-version }}-win_amd64"
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0"
@@ -80,7 +80,7 @@ jobs:
                   CIBW_BUILD: "${{ matrix.python-version }}-macosx_x86_64"
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
-                  CIBW_ENVIRONMENT: "USE_CBLAS=0"
+                  CIBW_ENVIRONMENT: "USE_CBLAS=0 PKG_CONFIG_PATH='/usr/local/opt/openblas/lib/pkgconfig'"
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
                   USE_OPENMP: 0
