--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -37,12 +37,12 @@ jobs:
                   # links are created. Without these, the installation will fail with the error
                   # of "fatal error: omp.h file found"
                   brew install libomp
-                  # libomp_dir=$(brew --prefix libomp)
-                  # ln -sf ${libomp_dir}/include/omp-tools.h  /usr/local/include/omp-tools.h
-                  # ln -sf ${libomp_dir}/include/omp.h        /usr/local/include/omp.h
-                  # ln -sf ${libomp_dir}/include/ompt.h       /usr/local/include/ompt.h
-                  # ln -sf ${libomp_dir}/lib/libomp.a         /usr/local/lib/libomp.a
-                  # ln -sf ${libomp_dir}/lib/libomp.dylib     /usr/local/lib/libomp.dylib
+                  libomp_dir=$(brew --prefix libomp)
+                  ln -sf ${libomp_dir}/include/omp-tools.h  /usr/local/include/omp-tools.h
+                  ln -sf ${libomp_dir}/include/omp.h        /usr/local/include/omp.h
+                  ln -sf ${libomp_dir}/include/ompt.h       /usr/local/include/ompt.h
+                  ln -sf ${libomp_dir}/lib/libomp.a         /usr/local/lib/libomp.a
+                  ln -sf ${libomp_dir}/lib/libomp.dylib     /usr/local/lib/libomp.dylib
 
             # Without this, installing cuda give error: no much space left on device
             - name: Clear Cache
