--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -15,9 +15,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                # os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [macos-latest]
                 # python-version: ['cp39', 'cp310', 'cp311', 'cp312', 'pp38', 'pp39', 'pp310']
-                python-version: ['cp39', 'cp310', 'cp311', 'cp312']
+                # python-version: ['cp39', 'cp310', 'cp311', 'cp312']
+                python-version: ['cp311']
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -38,6 +40,8 @@ jobs:
                   # of "fatal error: omp.h file found"
                   brew install libomp
                   libomp_dir=$(brew --prefix libomp)
+                  echo ${libomp_dir}
+                  ls ${libomp_dir}/include -all
                   # ln -sf ${libomp_dir}/include/omp-tools.h  /usr/local/include/omp-tools.h
                   ln -sf ${libomp_dir}/include/omp.h        /usr/local/include/omp.h
                   ln -sf ${libomp_dir}/include/ompt.h       /usr/local/include/ompt.h
