--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -16,7 +16,7 @@ jobs:
             fail-fast: false
             matrix:
                 # python-version: ['3.9', '3.10', '3.11', '3.12', 'pypy3.8', 'pypy3.9', 'pypy3.10']
-                python-version: ['3.9', '3.10', '3.11', '3.12']
+                python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
 
         steps:
             - name: Checkout
@@ -45,7 +45,7 @@ jobs:
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
-                  USE_OPENMP: 0
+                  USE_OPENMP: 1
                   COUNT_PERF: 1
                   USE_LOOP_UNROLLING: 1
                   USE_SYMMETRY: 1
