--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -24,7 +24,7 @@ jobs:
             - name: Setup Python 
               uses: actions/setup-python@v4
               with:
-                python-version: '3.12'
+                python-version: '3.13'
 
             - name: Install OpenMP for mac
               if: runner.os == 'macos'
@@ -108,7 +108,7 @@ jobs:
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0"
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
-                  USE_OPENMP: 0
+                  USE_OPENMP: 1
                   COUNT_PERF: 1
                   USE_LOOP_UNROLLING: 1
                   USE_SYMMETRY: 1
@@ -194,7 +194,7 @@ jobs:
             matrix:
                 # os: [ubuntu-latest, windows-latest, macos-latest]
                 os: [ubuntu-latest]
-                python-version: ['3.9', '3.10', '3.11', '3.12']
+                python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
 
         steps:
             - name: Setup Miniconda
