--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,7 +8,7 @@ numpydoc
 nbsphinx
 sphinx_design
 sphinx-multitoc-numbering
-sphinx-prompt
+sphinx-prompt>=1.10.0
 sphinx-copybutton
 sphinxext-opengraph
 scipy
